# smolVLA-mlx

./: .gitignore  .gitmodules  AGENTS.md  README.md  flake.nix  lefthook.yml  mix.exs  pyproject.toml
.claude/: settings.json
bench/: warm_latency.exs  warm_latency_python.py
config/: config.exs
docs/: CONTEXT-MAP.md  COVERAGE.md
docs/adr/: 0001-parallel-action-entry-point.md  0002-elixir-owns-the-control-loop.md  0003-emily-native-primary-zeromq-fallback.md  0004-weights-only-cross-runtime-sharing.md  0005-elixir-native-finetuning-conditional-retirement.md  0006-config-adapter-for-lerobot-checkpoint-shape.md  0007-msgpack-wire-format-for-zeromq-fallback.md  0008-chumak-pure-erlang-zeromq-client.md  0009-offline-action-accuracy-as-task-success-proxy.md  0010-beam-distribution-orthogonal-to-infer-action-port.md  0011-demo-is-a-simulated-closed-loop.md  0012-sim-env-bridged-via-python-sim-server-over-zeromq.md  0013-live-mujoco-viewer-mode-on-the-sim-server.md
docs/design/: design.html  design.md
finetune_job/: __init__.py  job.py
finetune_job/parity_gate/: __init__.py  (+5 more)
lib/: control_loop.ex  demo.ex  finetune_job.ex  inference_server.ex  sim_env_adapter.ex  smol_vla.ex
model_runtime_server/: __init__.py  __main__.py  server.py
scripts/: design-schema.json  gate-stamp-check  layer-integrity
sim_server/: __init__.py  __main__.py  env.py  server.py  viewer.py
test/: finetune_job_test.exs  inference_server_real_checkpoint_test.exs  inference_server_test.exs  sim_env_adapter_real_sim_test.exs  sim_env_adapter_test.exs  smol_vla_test.exs  test_helper.exs
(+84 files in other folders)
